[package]
name = "figs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Temporary MiniFB project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.27"
png = "0.17"
tar = "0.4"
cpal = "0.15"
hound = "3.4.0"